Обновлены настройки devcontainer: изменено имя контейнера, улучшены команды и права доступа, добавлены новые параметры для тестирования и анализа кода.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
-    "name": "My Development Container",
+    "name": "Python 3",
     "image": "mcr.microsoft.com/devcontainers/python:1-3.12",
     "remoteUser": "vscode",
     "updateRemoteUserUID": true,
     "containerUser": "vscode",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
     "workspaceFolder": "/workspace",
     "remoteEnv": {
         "GIT_SSH_COMMAND": "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null",
@@ -22,18 +21,23 @@
         "source=${localEnv:HOME}/.gnupg,target=/home/vscode/.gnupg,type=bind,consistency=cached",
         "source=${localWorkspaceFolder}/.continue,target=/home/vscode/.continue,type=bind,consistency=cached"
     ],
-    "initializeCommand": "mkdir -p ${localWorkspaceFolder}/.continue",
+    "initializeCommand": {
+        "mkdir-dirs": "mkdir -p \"${localWorkspaceFolder}/.continue\" && mkdir -p /workspace"
+    },
     "postCreateCommand": [
-        "/bin/bash",
-        "-c",
-        "until curl -s http://172.17.0.1:11434/api/health >/dev/null; do echo 'Waiting for Ollama...'; sleep 2; done && echo 'Ollama is ready!'"
+        "sudo mkdir -p /workspace",
+        "sudo chown -R vscode:vscode /workspace",
+        "sudo chmod 755 /workspace",
+        "sudo apt-get update",
+        "sudo apt-get install -y gnupg2 pinentry-tty gpg-agent",
+        "export PATH=$PATH:/custom/python/installation/bin",
+        "which python3 && python3 --version",
+        "which pip3 && pip3 --version",
+        "sudo chown -R vscode:vscode /home/vscode",
+        "sudo chmod 700 /home/vscode/.ssh /home/vscode/.gnupg /home/vscode/.continue",
+        "/bin/bash /home/vscode/.devcontainer/init.sh"
     ],
-    "onCreateCommand": "sudo apt-get update && sudo apt-get install -y gnupg2 pinentry-tty gpg-agent",
-    "postStartCommand": [
-        "/bin/bash",
-        "-c",
-        "until curl -s http://172.17.0.1:11434/api/health >/dev/null; do echo 'Waiting for Ollama...'; sleep 2; done && echo 'Ollama is ready!'"
-    ],
+    "postStartCommand": "echo 'Container started!'",
     "features": {
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
@@ -47,18 +51,56 @@
             "userUid": "1000",
             "userGid": "1000"
         },
-        "ghcr.io/devcontainers/features.python:1": "none"
+        "ghcr.io/devcontainers/features/python:1": "none"
     },
     "customizations": {
         "vscode": {
             "settings": {
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
-                // Настройки редактора
-                "editor.formatOnSave": true,
-                "editor.defaultFormatter": "ms-python.black-formatter",
-                "editor.codeActionsOnSave": {
-                    "source.organizeImports": "explicit"
-                },
+                "python.formatting.provider": "black",
+                "python.formatting.blackArgs": [
+                    "--line-length",
+                    "88"
+                ],
+                "python.linting.enabled": true,
+                "python.linting.pylintEnabled": true,
+                "python.linting.flake8Enabled": true,
+                "python.linting.flake8Args": [
+                    "--max-line-length=88",
+                    "--ignore=E203,W503"
+                ],
+                "python.sortImports.args": [
+                    "--profile",
+                    "black"
+                ],
+                "python.sortImports.path": "${workspaceFolder}/.venv/bin/isort",
+                "python.sortImports.organizeImports": true,
+                "python.analysis.languageServerMode": "default",
+                "python.analysis.indexing": true,
+                "python.analysis.autoImportCompletions": true,
+                "python.analysis.autoSearchPaths": true,
+                "python.analysis.completeFunctionParens": true,
+                "python.analysis.typeCheckingMode": "basic",
+                "python.testing.pytestEnabled": true,
+                "python.testing.unittestEnabled": false,
+                "python.testing.autoTestDiscoverOnSaveEnabled": true,
+                "python.testing.autoTestLaunchType": "background",
+                "python.testing.autoTestLaunchArgs": [
+                    "--disable-warnings",
+                    "--show-capture=stdout"
+                ],
+                "python.testing.autoTestLaunchPythonArgs": [
+                    "-m",
+                    "pytest"
+                ],
+                "python.testing.pytestArgs": [
+                    "--cov=.",
+                    "--cov-report=xml",
+                    "-v"
+                ],
+                "coverage-gutters.showGutterCoverage": true,
+                "coverage-gutters.showLineCoverage": true,
+                "coverage-gutters.showRulerCoverage": true,
                 "editor.suggestSelection": "recentlyUsed",
                 "editor.tabCompletion": "on",
                 "editor.acceptSuggestionOnCommitCharacter": true,
@@ -71,42 +113,7 @@
                 "editor.inlineSuggest.enabled": true,
                 "editor.suggest.preview": true,
                 "editor.suggest.showStatusBar": true,
-                // Настройки форматирования
-                "black-formatter.args": [
-                    "--line-length",
-                    "88",
-                    "--target-version",
-                    "py312",
-                    "--skip-string-normalization"
-                ],
-                "isort.args": [
-                    "--profile",
-                    "black",
-                    "--line-length",
-                    "88"
-                ],
-                // Линтинг
-                "python.linting.enabled": true,
-                "python.linting.pylintEnabled": true,
-                "python.linting.flake8Enabled": true,
-                "python.linting.flake8Args": [
-                    "--max-line-length=88",
-                    "--ignore=E203,W503"
-                ],
-                // Анализ кода
-                "python.analysis.languageServerMode": "default",
-                "python.analysis.typeCheckingMode": "basic",
-                "python.analysis.autoImportCompletions": true,
-                // Тестирование
-                "python.testing.pytestEnabled": true,
-                "python.testing.unittestEnabled": false,
-                "python.testing.autoTestDiscoverOnSaveEnabled": true,
-                "python.testing.pytestArgs": [
-                    "--cov=.",
-                    "--cov-report=xml",
-                    "-v"
-                ],
-                // Прочие настройки
+                "editor.formatOnSave": true,
                 "extensions.autoUpdate": true,
                 "extensions.autoCheckUpdates": true,
                 "git.autofetch": true,
@@ -135,11 +142,11 @@
                 "terminal.integrated.tabs.description": "${task}${separator}${local}${separator}${cwd}",
                 "terminal.integrated.tabs.separator": " - ",
                 "terminal.integrated.defaultProfile.linux": "bash",
-                "terminal.integrated.shellIntegration.decorationsEnabled": "both",
+                "terminal.integrated.shellIntegration.decorationsEnabled": true,
                 "terminal.integrated.shellIntegration.enabled": true,
                 "terminal.integrated.fontSize": 12,
                 "terminal.integrated.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
-                "workbench.editor.showTabs": "multiple",
+                "workbench.editor.showTabs": true,
                 "workbench.statusBar.visible": true,
                 "workbench.colorCustomizations": {
                     "--vscode-editor-foreground": "var(--vscode-editor-foreground)",
@@ -149,10 +156,6 @@
                     "*.py": "python",
                     "*.yaml": "yaml",
                     "*.yml": "yaml"
-                },
-                "files.exclude": {
-                    "**/*.pyc": true,
-                    "**/node_modules/**": true
                 }
             },
             "extensions": [
@@ -173,7 +176,7 @@
                 "ms-vscode-remote.remote-explorer",
                 "github.vscode-pull-request-github",
                 "redhat.vscode-yaml",
-                "GitHub.vscode-pull-request-github-actions",
+                "GitHub.vscode-github-actions",
                 "continue.continue",
                 "saoudrizwan.claude-dev",
                 "ryanluker.vscode-coverage-gutters"
