--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,62 +1,29 @@
 {
     "name": "Python 3",
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
+    "workspaceFolder": "/workspace",
     "image": "mcr.microsoft.com/devcontainers/python:1-3.12",
     "remoteUser": "vscode",
     "updateRemoteUserUID": true,
     "containerUser": "vscode",
-    "workspaceFolder": "/workspace",
     "remoteEnv": {
         "GIT_SSH_COMMAND": "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null",
         "SYNC_LOCALHOST_KUBECONFIG": "true",
         "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}",
-        "VIRTUAL_ENV_PROMPT": "(dev) ",
+        "VIRTUAL_ENV_PROMPT": "($$$) ",
         "SHELL": "/bin/bash",
         "GPG_TTY": "/dev/pts/0",
         "GNUPGHOME": "/home/vscode/.gnupg",
         "SSH_AUTH_SOCK": "/run/host-services/ssh-auth.sock",
         "GPG_KEY": "oleg1203@gmail.com"
     },
-    "mounts": [
-        "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
-        "source=${localEnv:HOME}/.gnupg,target=/home/vscode/.gnupg,type=bind,consistency=cached",
-        "source=${localWorkspaceFolder}/.continue,target=/home/vscode/.continue,type=bind,consistency=cached"
-    ],
-    "initializeCommand": {
-        "mkdir-dirs": "mkdir -p \"${localWorkspaceFolder}/.continue\" && mkdir -p /workspace"
-    },
-    "postCreateCommand": [
-        "sudo mkdir -p /workspace",
-        "sudo chown -R vscode:vscode /workspace",
-        "sudo chmod 755 /workspace",
-        "sudo apt-get update",
-        "sudo apt-get install -y gnupg2 pinentry-tty gpg-agent",
-        "export PATH=$PATH:/custom/python/installation/bin",
-        "which python3 && python3 --version",
-        "which pip3 && pip3 --version",
-        "sudo chown -R vscode:vscode /home/vscode",
-        "sudo chmod 700 /home/vscode/.ssh /home/vscode/.gnupg /home/vscode/.continue",
-        "/bin/bash /home/vscode/.devcontainer/init.sh"
-    ],
-    "postStartCommand": "echo 'Container started!'",
-    "features": {
-        "ghcr.io/devcontainers/features/git:1": {
-            "version": "latest",
-            "ppa": true
-        },
-        "ghcr.io/devcontainers/features/github-cli:1": {},
-        "ghcr.io/devcontainers/features/common-utils:2": {
-            "installZsh": true,
-            "upgradePackages": true,
-            "username": "vscode",
-            "userUid": "1000",
-            "userGid": "1000"
-        },
-        "ghcr.io/devcontainers/features/python:1": "none"
-    },
     "customizations": {
         "vscode": {
             "settings": {
-                "python.defaultInterpreterPath": "/usr/local/bin/python",
+                "editor.formatOnSave": true,
+                "editor.formatOnSaveMode": "file",
+                "files.autoSave": "afterDelay",
+                "files.autoSaveDelay": 3000,
                 "python.formatting.provider": "black",
                 "python.formatting.blackArgs": [
                     "--line-length",
@@ -101,19 +68,27 @@
                 "coverage-gutters.showGutterCoverage": true,
                 "coverage-gutters.showLineCoverage": true,
                 "coverage-gutters.showRulerCoverage": true,
-                "editor.suggestSelection": "recentlyUsed",
+                "editor.suggest.snippetsPreventQuickSuggestions": false,
+                "editor.suggest.insertMode": "replace",
+                "editor.suggestSelection": "first",
                 "editor.tabCompletion": "on",
                 "editor.acceptSuggestionOnCommitCharacter": true,
-                "editor.acceptSuggestionOnEnter": "smart",
-                "editor.quickSuggestions": {
-                    "other": "on",
-                    "comments": "on",
-                    "strings": "on"
+                "editor.acceptSuggestionOnEnter": "on",
+                "editor.codeActionsOnSave": {
+                    "source.organizeImports": true,
+                    "source.fixAll": true,
+                    "source.fixAll.eslint": true
                 },
-                "editor.inlineSuggest.enabled": true,
-                "editor.suggest.preview": true,
-                "editor.suggest.showStatusBar": true,
-                "editor.formatOnSave": true,
+                "editor.defaultFormatter": "ms-python.black-formatter",
+                "editor.suggest.showMethods": true,
+                "editor.suggest.showFunctions": true,
+                "editor.suggest.showVariables": true,
+                "editor.suggest.showClasses": true,
+                "editor.quickSuggestions": {
+                    "other": true,
+                    "comments": true,
+                    "strings": true
+                },
                 "extensions.autoUpdate": true,
                 "extensions.autoCheckUpdates": true,
                 "git.autofetch": true,
@@ -137,26 +112,7 @@
                 "dev.containers.gitCredentialsHelper": "cache",
                 "dev.containers.workspaceMountConsistency": "cached",
                 "github.copilot.includeFilePatterns": [],
-                "continue.includeFilePatterns": [],
-                "terminal.integrated.tabs.title": "${process}${separator}${sequence}",
-                "terminal.integrated.tabs.description": "${task}${separator}${local}${separator}${cwd}",
-                "terminal.integrated.tabs.separator": " - ",
-                "terminal.integrated.defaultProfile.linux": "bash",
-                "terminal.integrated.shellIntegration.decorationsEnabled": true,
-                "terminal.integrated.shellIntegration.enabled": true,
-                "terminal.integrated.fontSize": 12,
-                "terminal.integrated.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
-                "workbench.editor.showTabs": true,
-                "workbench.statusBar.visible": true,
-                "workbench.colorCustomizations": {
-                    "--vscode-editor-foreground": "var(--vscode-editor-foreground)",
-                    "--vscode-status-bar-background": "var(--vscode-status-bar-background)"
-                },
-                "files.associations": {
-                    "*.py": "python",
-                    "*.yaml": "yaml",
-                    "*.yml": "yaml"
-                }
+                "continue.includeFilePatterns": []
             },
             "extensions": [
                 "ms-python.python",
@@ -179,7 +135,9 @@
                 "GitHub.vscode-github-actions",
                 "continue.continue",
                 "saoudrizwan.claude-dev",
-                "ryanluker.vscode-coverage-gutters"
+                "ryanluker.vscode-coverage-gutters",
+                "GitHub.copilot-chat",
+                "GitHub.copilot"
             ]
         }
     },
@@ -188,5 +146,41 @@
             "label": "Hello Remote World",
             "onAutoForward": "notify"
         }
-    }
+    },
+    "initializeCommand": "mkdir -p ${localWorkspaceFolder}/.continue",
+    "mounts": [
+        "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
+        "source=${localEnv:HOME}/.gnupg,target=/home/vscode/.gnupg,type=bind,consistency=cached",
+        "source=${localWorkspaceFolder}/.continue,target=/home/vscode/.continue,type=bind,consistency=cached"
+    ],
+    "features": {
+        "ghcr.io/devcontainers/features/git:1": {
+            "version": "latest",
+            "ppa": true
+        },
+        "ghcr.io/devcontainers/features/github-cli:1": {},
+        "ghcr.io/devcontainers/features/common-utils:2": {
+            "installZsh": true,
+            "upgradePackages": true,
+            "username": "vscode",
+            "userUid": "1000",
+            "userGid": "1000"
+        }
+    },
+    "onCreateCommand": "sudo apt-get update && sudo apt-get install -y gnupg2 pinentry-tty gpg-agent",
+    "postCreateCommand": [
+        "/bin/bash",
+        "-c",
+        "chmod +x .devcontainer/init-scripts/init.sh && .devcontainer/init-scripts/init.sh"
+    ],
+    "postStartCommand": [
+        "/bin/bash",
+        "-c",
+        "until curl -s http://172.17.0.1:11434/api/health >/dev/null; do echo 'Waiting for Ollama...'; sleep 2; done && echo 'Ollama is ready!'"
+    ],
+    "postSaveCommand": [
+        "/bin/bash",
+        "-c",
+        "if [ \"$CODE_FILE\" != \"\" ]; then black $CODE_FILE; fi"
+    ]
 }
